# zsh-pinyin-completion-rs

./: .gitignore  Cargo.toml  README.md  install.sh  zsh-pinyin-completion-rs.plugin.zsh
lib/: config.zsh  pinyin-completion.zsh
src/: main.rs
